--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 axum = {version = "0.5", features = ["ws"]}
+serde_json = "1.0.81"
+serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
