--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ axum = {version = "0.5", features = ["ws"]}
 serde_json = "1.0.81"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
+rdkafka  = "0.28"
