--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde_json = "1.0.81"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 rdkafka  = "0.28"
+scylla = "0.4"
